--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,6 +45,7 @@
 
 :root {
   --radius: 0.625rem;
+  --brand-white: #fafafaaa;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
@@ -76,6 +77,9 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+
+  --header-height: 80px;
+  --banner-height: calc(90vh - var(--header-height));
 }
 
 .dark {
